localslackirc (1.8-1) UNRELEASED; urgency=medium

  * New upstream release
  * Require python3.8 at least

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Sun, 01 Mar 2020 12:47:17 +0100

localslackirc (1.7-1) unstable; urgency=medium

  * New upstream release
  * Adds localslackirc@.service file

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Sat, 29 Feb 2020 01:57:40 +0100

localslackirc (1.6-1) unstable; urgency=low

  * New upstream release
  * Bump Standards-Version to 4.5.0
  * Define Rules-Requires-Root: no

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Sun, 23 Feb 2020 11:29:48 +0100

localslackirc (1.5-1) unstable; urgency=low

  * New upstream release

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Sun, 10 Nov 2019 20:51:16 +0100

localslackirc (1.4-1) unstable; urgency=low

  * New upstream release
  * Bump Standards-Version to 4.4.0
  * Bump compat level to 12

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Mon, 16 Sep 2019 20:38:02 +0200

localslackirc (1.3-1) unstable; urgency=medium

  * New upstream release (Closes: #926320)

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Tue, 16 Apr 2019 20:05:22 +0200

localslackirc (1.2-1) unstable; urgency=medium

  * New upstream release
  * Bump Standards-Version to 4.3.0

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Sat, 26 Jan 2019 10:12:13 +0100

localslackirc (1.1-1) unstable; urgency=low

  * Initial release. (Closes: #905021)

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Thu, 14 Jun 2018 16:03:09 +0200