@@ -1,3 +1,4 @@
+attr
 requests
 typedload
 websocket-client
